<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="90dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="lucas.com.meupossante.Agua"
        >

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/manutencaoItemImagemAgua"
            android:src="@drawable/ic_agua"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/agua"
            android:id="@+id/manutencaoItemTituloAgua"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:gravity="left|center_vertical"
            android:textSize="27sp"
            android:textStyle="normal"
            android:layout_alignBottom="@+id/manutencaoItemImagemAgua"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/manutencaoItemImagemAgua"
            android:layout_toEndOf="@+id/manutencaoItemImagemAgua"
            android:paddingLeft="20dp"
            android:layout_alignTop="@+id/manutencaoItemImagemAgua" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lembrar de verificar o nível da água"
            android:id="@+id/legendaAgua"
            android:layout_below="@+id/manutencaoItemImagemAgua"
            android:layout_marginTop="36dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/aguaGroup"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/legendaAgua">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio1Agua"
                android:textColor="@color/textosimples"
                android:text="@string/radio1Agua"
                android:buttonTint="@color/amarelopadrao"
                android:checked="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio2Agua"
                android:textColor="@color/textosimples"
                android:text="@string/radio2Agua"
                android:buttonTint="@color/amarelopadrao"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio3Agua"
                android:textColor="@color/textosimples"
                android:text="@string/radio3Agua"
                android:buttonTint="@color/amarelopadrao"
                android:checked="false"/>
        </RadioGroup>

        <View
            android:id="@+id/DivisorAgua"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#000000"
            android:layout_below="@+id/aguaGroup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aditivo"
            android:text="@string/aditivo"
            android:layout_below="@+id/DivisorAgua"
            android:layout_marginTop="36dp"/>

        <TextView
            android:id="@+id/verificaoAgua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aditivo"
            android:layout_marginTop="24dp"
            android:layout_centerHorizontal="true"
            android:text="@string/legenda_agua"/>

        <EditText
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:id="@+id/aguaEditText"
            android:inputType="number"
            android:background="@color/colorAccent"
            android:hint=""
            android:textColor="@color/colortext"
            android:textColorHint="@color/colortexthint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/verificaoAgua"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacao"
            android:layout_below="@+id/aguaEditText"
            android:id="@+id/observacao"
            android:textSize="10dp"
            android:layout_marginTop="36dp"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:text="Salvar"
            android:textColor="@color/colortext"
            android:id="@+id/salvarAgua"
            android:layout_marginTop="34dp"
            android:layout_centerHorizontal="true"
            android:onClick="aguaClick"
            android:layout_below="@+id/observacao"/>


    </RelativeLayout>
</ScrollView>
