<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="lucas.com.meupossante.Rastreio"
        tools:showIn="@layout/app_bar_rastreio">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iconeRastreio"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_carro" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rastrear_veiculo"
            android:id="@+id/tituloRastreio"
            android:layout_alignTop="@+id/iconeRastreio"
            android:layout_toRightOf="@+id/iconeRastreio"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@+id/iconeRastreio"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_rastreamento"
            android:id="@+id/rastreamentoSwitch"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp"
            android:checked="false"
            android:layout_below="@+id/iconeRastreio"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_alignRight="@+id/tituloRastreio"
            android:layout_alignEnd="@+id/tituloRastreio"
            android:textOff="@string/iniciar_rastreamento"
            android:textOn="@string/parar_rastreamento" />

    </RelativeLayout>
</ScrollView>