<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="90dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="lucas.com.meupossante.Pneus"
        >

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:id="@+id/manutencaoItemImagemPneus"
        android:src="@drawable/ic_pneus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pneus"
        android:id="@+id/manutencaoItemTituloPneus"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:gravity="left|center_vertical"
        android:textSize="27sp"
        android:textStyle="normal"
        android:layout_alignBottom="@+id/manutencaoItemImagemPneus"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/manutencaoItemImagemPneus"
        android:layout_toEndOf="@+id/manutencaoItemImagemPneus"
        android:paddingLeft="20dp"
        android:layout_alignTop="@+id/manutencaoItemImagemPneus" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lembrar de calibrar os pneus:"
        android:id="@+id/legendaPneus"
        android:layout_below="@+id/manutencaoItemImagemPneus"
        android:layout_marginTop="36dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/pneusGroup"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/legendaPneus">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio1Pneus"
            android:textColor="@color/textosimples"
            android:text="@string/radio1Pneus"
            android:buttonTint="@color/amarelopadrao"
            android:checked="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio2Pneus"
            android:textColor="@color/textosimples"
            android:text="@string/radio2Pneus"
            android:buttonTint="@color/amarelopadrao"
            android:checked="true"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observacao"
        android:layout_below="@+id/pneusGroup"
        android:id="@+id/observacao"
        android:textSize="10dp"
        android:layout_marginTop="34dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/corners"
        android:text="Salvar"
        android:textColor="@color/colortext"
        android:id="@+id/salvarPneus"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"
        android:onClick="pneusClick"
        android:layout_below="@+id/observacao"/>


    </RelativeLayout>
</ScrollView>
