<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="lucas.com.meupossante.Configuracoes"
    tools:showIn="@layout/app_bar_configuracoes">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/configuracoes"
        android:textAllCaps="true"
        android:id="@+id/configuracoesTitulo"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/modificar_km"
        android:id="@+id/configuracoesModificarKM"
        android:layout_below="@+id/configuracoesTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/configuracoesModificarKMEditText"
        android:layout_below="@+id/configuracoesModificarKM"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/configuracoesOKButton"
        android:layout_toStartOf="@+id/configuracoesOKButton"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="KM"
        android:id="@+id/configuracoesKM"
        android:layout_alignBottom="@+id/configuracoesModificarKMEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/configuracoesModificarKMEditText"
        android:layout_toEndOf="@+id/configuracoesModificarKMEditText"
        android:layout_alignTop="@+id/configuracoesModificarKMEditText"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/configuracoesOKButton"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/configuracoesModificarKMEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

</RelativeLayout>