<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layout_marginTop="60dp">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/layoutrelativo"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="lucas.com.meupossante.ManutencaoItem"
        tools:showIn="@layout/app_bar_manutencao_item">


        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/manutencaoItemImagem"
            android:src="@drawable/ic_agua"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/agua"
            android:id="@+id/manutencaoItemTitulo"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:gravity="left|center_vertical"
            android:textSize="27sp"
            android:textStyle="normal"
            android:layout_alignBottom="@+id/manutencaoItemImagem"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/manutencaoItemImagem"
            android:layout_toEndOf="@+id/manutencaoItemImagem"
            android:paddingLeft="20dp"
            android:layout_alignTop="@+id/manutencaoItemImagem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/descricao_agua"
            android:id="@+id/manutencaoItemDescricao"
            android:layout_below="@+id/manutencaoItemImagem"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="36dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/manutencaoItemQuilometragemAtualTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manutencaoItemDescricao"
            android:layout_marginTop="34dp"
            android:layout_centerHorizontal="true"
            android:text="@string/legenda_agua"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="45dp"
            android:id="@+id/manutencaoItemEditText"
            android:inputType="number"
            android:background="@color/colorAccent"
            android:hint=""
            android:textColorHint="@color/colortexthint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/manutencaoItemQuilometragemAtualTextView"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_oabaixo"
            android:layout_below="@+id/manutencaoItemEditText"
            android:id="@+id/oabaixoButton"
            android:layout_marginTop="20dp"
            android:onClick="itemClick"/>

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_oacima"
            android:visibility="invisible"
            android:layout_below="@+id/manutencaoItemEditText"
            android:id="@+id/oacimaButton"
            android:layout_marginTop="20dp"
            android:onClick="itemClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Opções Avançadas"
            android:id="@+id/textopcoesavancadas"
            android:layout_toRightOf="@+id/oabaixoButton"
            android:layout_below="@+id/manutencaoItemEditText"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="3dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textopcoesavancadas"
            android:id="@+id/txtage"
            android:visibility="invisible"
            android:layout_marginTop="22dp"
            android:text="Se preferir, você pode agendar este serviço de
acordo com a recomendação do fabricante do seu veículo."/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/servico"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txtage"
            android:visibility="invisible"
            android:text="Fazer este serviço a cada"/>


        <EditText
            android:layout_width="80dp"
            android:layout_height="23dp"
            android:id="@+id/servicoedit"
            android:inputType="number"
            android:background="@color/colorAccent"
            android:hint=""
            android:textColor="@color/colortext"
            android:textColorHint="@color/colortexthint"
            android:layout_toRightOf="@+id/servico"
            android:layout_marginLeft="5dp"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txtage"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:background="@drawable/corners"
            android:text="OK"
            android:textColor="@color/colortext"
            android:visibility="invisible"
            android:id="@+id/salvarOA"
            android:layout_toRightOf="@+id/servicoedit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/txtage"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observacao"
            android:layout_below="@+id/txtage"
            android:id="@+id/observacao"
            android:textSize="10dp"
            android:layout_marginTop="34dp"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/corners"
            android:text="Salvar"
            android:textColor="@color/colortext"
            android:id="@+id/salvarOpcoesAvancadas"
            android:layout_marginTop="34dp"
            android:layout_centerHorizontal="true"
            android:onClick="itemClick"
            android:layout_below="@+id/observacao"/>



    </RelativeLayout>
</ScrollView>